log/build_2024-09-25_22-05-53/py_srvcli/stderr.log
  File "/home/mayo_poyo/ros2_ws2/install/py_srvcli/lib/python3.12/site-packages/py_srvcli/client_member_function.py", line 23
    	future = minimal_client.send_request(int(sys.argv[1]), int(sys.argv[2]), int(sys.argv[3])
    	                                    ^
SyntaxError: '(' was never closed

